package com.connectaoficios.api.enums;

public enum DiaSemana {

    LUNES,
    MARTES,
    MIERCOLES,
    JUEVES,
    VIERNES,
    SABADO,
    DOMINGO
}