package com.connectaoficios.api.enums;

public class EstadoReporte {
}
