package com.connectaoficios.api.enums;

public class EstadoServicio {
}
