package com.connectaoficios.api.enums;

public class EstadoSolicitud {
}
