package com.connectaoficios.api.enums;

public class EstadoTransaccion {
}
