package com.connectaoficios.api.enums;

public enum TipoNotificacion {

    NUEVA_SOLICITUD,
    CAMBIO_ESTADO_SOLICITUD,
    NUEVO_MENSAJE,
    NUEVA_RESENA,
    PROMOCION,
    SISTEMA
}