package com.connectaoficios.api.enums;

public enum TipoReporte {

    USUARIO,
    SERVICIO
}