package com.connectaoficios.api.modelos;

public class ZonaCobertura {
}
